fix a mistaque to prevent horizontal scrolling

--- a/src/Styles/Hero.scss
+++ b/src/Styles/Hero.scss
@@ -74,6 +74,10 @@
                 font-size: 50px;
 
             }
+
+            p {
+                margin-right: 15px;
+            }
         }
 
     }
@@ -98,6 +102,7 @@
 
 
             }
+
 
             span {
                 font-size: 56px;
